[fix bug]：解决网页图片点击相应问题

--- a/WebViewApp/app/src/main/assets/index.html
+++ b/WebViewApp/app/src/main/assets/index.html
@@ -63,7 +63,7 @@
             }
         for(var i=0;i<objs.length;i++)
             {
-                objs[i].οnclick=function()
+                objs[i].onclick=function()
                     {
                         window.imagelistener.openImage(this.src,array);
                     }
@@ -77,7 +77,7 @@
         var objs = document.getElementsByTagName('video');
         for(var i=0;i<objs.length;i++)
             {
-                objs[i].οnclick=function()
+                objs[i].onclick=function()
                     {
                         window.imagelistener.openVideo(this.src);
                     }
