[update]：完善注释，修改js调用位置

--- a/WebViewApp/app/src/main/assets/index.html
+++ b/WebViewApp/app/src/main/assets/index.html
@@ -25,16 +25,37 @@
     <video controls height="auto" style="margin-top: 10px;" width="100%">
         <source src="video1.mp4" type="video/mp4">
     </video>
-    <video controls height="auto" style="margin-top: 10px;" width="100%">
+    <video controls height="auto" onclick="test()" style="margin-top: 10px;" width="100%">
         <source src="video2.mp4" type="video/mp4">
     </video>
 </div>
 </body>
 
+
+<script>
+    function test()
+    {
+       alert("221");
+               var objs = document.getElementsByTagName("img");
+        var array=new Array();
+        for(var j=0;j<objs.length;j++)
+            {
+                array[j]=objs[j].src;
+            }
+        for(var i=0;i<objs.length;i++)
+            {
+                objs[i].οnclick=function()
+                    {
+                        alert("222");
+                    }
+            }
+    }
+
+</script>
 <script>
     function imageCall()
     {
-        var objs = document.getElementsByTagName("img");
+        var objs = document.getElementsByTagName('img');
         var array=new Array();
         for(var j=0;j<objs.length;j++)
             {
@@ -48,13 +69,12 @@
                     }
             }
     }
-
 </script>
 
 <script>
     function videoCall()
     {
-        var objs = document.getElementsByTagName("video");
+        var objs = document.getElementsByTagName('video');
         for(var i=0;i<objs.length;i++)
             {
                 objs[i].οnclick=function()
@@ -63,7 +83,6 @@
                     }
             }
     }
-
 </script>
 
 
