[BugFixed]:图片视频多媒体播放在线测试部分通过（百度图片√，百度视频√）

--- a/WebViewApp/app/src/main/assets/index.html
+++ b/WebViewApp/app/src/main/assets/index.html
@@ -23,11 +23,12 @@
 <div class="container">
     <img src="img1.jpg" width="100%"></img>
     <img src="img2.jpg" style="margin-top: 10px;" width="100%"></img>
+    <a href="https://vd4.bdstatic.com/mda-mg01wusz4z1ja3am/sc/cae_h264/1625102728518022335/mda-mg01wusz4z1ja3am.mp4?v_from_s=hkapp-haokan-hnb&auth_key=1625192170-0-0-87b3bd3328be83839248429dc615c7a2&bcevod_channel=searchbox_feed&pd=1&pt=3&abtest=">打开链接</a>
     <video controls height="auto" style="margin-top: 10px;" width="100%">
         <source src="video1.mp4" type="video/mp4">
     </video>
     <video controls height="auto" onclick="test()" style="margin-top: 10px;" width="100%">
-        <source src="video2.mp4" type="video/mp4">
+        <source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" type="video/mp4">
     </video>
 </div>
 </body>
