--- a/WebViewApp/app/src/main/assets/askToJump.html
+++ b/WebViewApp/app/src/main/assets/askToJump.html
@@ -20,29 +20,39 @@
             justify-content: center;
         }
 
+        .container{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: -50%;
+        }
+
         .askText {
             width: 100%;
             /* margin-top: 50px; */
-            font-size: large;
+            font-size: 22px;
+            font-weight: bold;
             text-align: center;
         }
 
         .btnBox {
             width: 100%;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+            justify-content: center;
             align-items: center;
-            margin-top: 50px;
+            margin-top: 20px;
         }
 
         .btn1 {
             background-color: white;
             /* Green */
             border: none;
-            color: #4CAF50;
+            color: gray;
             border-radius: 10px;
-            border: 2px solid #4CAF50;
-            padding: 15px 32px;
+            border: 2px solid gray;
+            padding: 10px 25px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -56,21 +66,24 @@
             color: red;
             border-radius: 10px;
             border: 2px solid red;
-            padding: 15px 32px;
+            padding: 10px 25px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
+            margin-left: 20px;
         }
     </style>
 </head>
 
 <body>
-    <div>
+    <div class="container">
+        
+        <img src="blockImg.png" width="90%">
         <div class="askText">该网页有风险，是否继续访问?</div>
         <div class="btnBox">
             <button class="btn1" onclick="confirmView()">继续访问</button>
-            <button class="btn2" style="margin-top:50px" onclick="cancelView()">取消访问</button>
+            <button class="btn2" onclick="cancelView()">取消访问</button>
         </div>
     </div>
 </body>
@@ -78,11 +91,9 @@
 
     function confirmView() {
         alert("1");//弹窗
-        javascript: blockListener.confirmView("1");//继续访问,传值给安卓
     }
     function cancelView() {
         alert("0");//弹窗
-        javascript: blockListener.cancelView("0");//停止访问,传值给安卓
     }
 </script>
 
