--- a/WebViewApp/app/src/main/assets/index.html
+++ b/WebViewApp/app/src/main/assets/index.html
@@ -24,7 +24,7 @@
     <img src="img1.jpg" width="100%"></img>
     <img src="img2.jpg" style="margin-top: 10px;" width="100%"></img>
     <video controls height="auto" style="margin-top: 10px;" width="100%">
-        <source src="video1.mp4" type="video/mp4">
+        <source src="https://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4">
     </video>
     <video controls height="auto" onclick="test()" style="margin-top: 10px;" width="100%">
         <source src="video2.mp4" type="video/mp4">
